finish homework servlet design 找餐廳功能跟找低分留言servlet

--- a/Servlet Design/TomcatServletDesign/bin/.gitignore
+++ b/Servlet Design/TomcatServletDesign/bin/.gitignore
@@ -1,4 +1,3 @@
-/MyHttpServlet.class
-/MyXmlDtoParser.class
-/SearchRestaurantByName.class
-/SearchRestaurantsByName.class
+/SearchLowRateCommentServlet.class
+/CheckXmlAvailableServlet.class
+/CheckXmlAvailableServlet$1.class
