--- a/Servlet Design/TomcatServletDesign/.classpath
+++ b/Servlet Design/TomcatServletDesign/.classpath
@@ -2,10 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="D:/apache-tomcat-6.0.48/lib/jsp-api.jar"/>
-	<classpathentry kind="lib" path="D:/apache-tomcat-6.0.48/lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="D:/apache-tomcat-6.0.48/webapps/TriMago/WEB-INF/lib/serializer.jar"/>
-	<classpathentry kind="lib" path="D:/apache-tomcat-6.0.48/webapps/TriMago/WEB-INF/lib/xalan.jar"/>
-	<classpathentry kind="lib" path="D:/apache-tomcat-6.0.48/webapps/TriMago/WEB-INF/lib/WaterballDataHandler.jar"/>
+	<classpathentry kind="lib" path="C:/Users/user/Desktop/XML-Final-Project-Presentation/TriMago/WEB-INF/lib/serializer.jar"/>
+	<classpathentry kind="lib" path="C:/Users/user/Desktop/XML-Final-Project-Presentation/TriMago/WEB-INF/lib/xalan.jar"/>
+	<classpathentry kind="lib" path="C:/Users/user/Desktop/apache-tomcat-6.0.41/lib/jsp-api.jar"/>
+	<classpathentry kind="lib" path="C:/Users/user/Desktop/apache-tomcat-6.0.41/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="C:/Users/user/Desktop/apache-tomcat-6.0.41/webapps/TriMago/WEB-INF/lib/DataHandler.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
