--- a/Servlet Design/TomcatServletDesign/.classpath
+++ b/Servlet Design/TomcatServletDesign/.classpath
@@ -2,10 +2,15 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/user/Desktop/XML-Final-Project-Presentation/TriMago/WEB-INF/lib/serializer.jar"/>
-	<classpathentry kind="lib" path="C:/Users/user/Desktop/XML-Final-Project-Presentation/TriMago/WEB-INF/lib/xalan.jar"/>
-	<classpathentry kind="lib" path="C:/Users/user/Desktop/apache-tomcat-6.0.41/lib/jsp-api.jar"/>
-	<classpathentry kind="lib" path="C:/Users/user/Desktop/apache-tomcat-6.0.41/lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="C:/Users/user/Desktop/apache-tomcat-6.0.41/webapps/TriMago/WEB-INF/lib/DataHandler.jar"/>
+	<classpathentry kind="lib" path="converter-gson-2.0.0-beta3.jar"/>
+	<classpathentry kind="lib" path="gson-2.2.3.jar"/>
+	<classpathentry kind="lib" path="jsp-api.jar"/>
+	<classpathentry kind="lib" path="okhttp-3.0.0-RC1.jar"/>
+	<classpathentry kind="lib" path="okio-1.6.0.jar"/>
+	<classpathentry kind="lib" path="retrofit-2.2.0.jar"/>
+	<classpathentry kind="lib" path="serializer.jar"/>
+	<classpathentry kind="lib" path="servlet-api.jar"/>
+	<classpathentry kind="lib" path="WaterballDataHandler.jar"/>
+	<classpathentry kind="lib" path="xalan.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
