三大網站基本完成 search留下遺憾

--- a/Servlet Design/TomcatServletDesign/bin/.gitignore
+++ b/Servlet Design/TomcatServletDesign/bin/.gitignore
@@ -7,3 +7,7 @@
 /IndexXslServlet.class
 /MapXslServlet.class
 /AboutXslServlet.class
+/ImgurApi.class
+/CreateRestaurantServlet.class
+/XPathResultServlet.class
+/SearchRestaurantServlet.class
