--- a/TriMago/WEB-INF/web.xml
+++ b/TriMago/WEB-INF/web.xml
@@ -38,8 +38,16 @@
         <servlet-name>AboutXslServlet</servlet-name>
         <servlet-class>AboutXslServlet</servlet-class>
     </servlet>
+	<servlet>
+        <servlet-name>SearchRestaurantServlet</servlet-name>
+        <servlet-class>SearchRestaurantServlet</servlet-class>
+    </servlet>
 
     <servlet-mapping>
+        <servlet-name>IndexXslServlet</servlet-name>
+        <url-pattern>/index.xml</url-pattern>
+    </servlet-mapping>
+	<servlet-mapping>
         <servlet-name>IndexXslServlet</servlet-name>
         <url-pattern>/index</url-pattern>
     </servlet-mapping>
@@ -50,6 +58,10 @@
 	<servlet-mapping>
         <servlet-name>AboutXslServlet</servlet-name>
         <url-pattern>/about</url-pattern>
+    </servlet-mapping>
+	<servlet-mapping>
+        <servlet-name>SearchRestaurantServlet</servlet-name>
+        <url-pattern>/search</url-pattern>
     </servlet-mapping>
 	
 
