改id查詢詳情 , 加了detail servlet

--- a/Servlet Design/TomcatServletDesign/bin/.gitignore
+++ b/Servlet Design/TomcatServletDesign/bin/.gitignore
@@ -1,13 +1,1 @@
-/IndexServlet.class
-/BaseXslServlet.class
-/XmlContext.class
-/BaseXslTransformServlet.class
-/MyXmlDataHandler.class
-/MyXmlDataParser.class
-/IndexXslServlet.class
-/MapXslServlet.class
-/AboutXslServlet.class
-/ImgurApi.class
-/CreateRestaurantServlet.class
-/XPathResultServlet.class
-/SearchRestaurantServlet.class
+/DetailXslServlet.class
