--- a/Servlet Design/TomcatServletDesign/bin/.gitignore
+++ b/Servlet Design/TomcatServletDesign/bin/.gitignore
@@ -1,2 +1,6 @@
 /DetailXslServlet.class
 /CreateRestaurantServlet.class
+/ImgurAPI.class
+/ImageResponse.class
+/ImageResponse$UploadedImage.class
+/API/
