--- a/Servlet Design/TomcatServletDesign/.classpath
+++ b/Servlet Design/TomcatServletDesign/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry kind="lib" path="servlet-api.jar"/>
 	<classpathentry kind="lib" path="WaterballDataHandler.jar"/>
 	<classpathentry kind="lib" path="xalan.jar"/>
+	<classpathentry kind="lib" path="commons-fileupload-1.3.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
