--- a/Servlet Design/TomcatServletDesign/.classpath
+++ b/Servlet Design/TomcatServletDesign/.classpath
@@ -11,6 +11,6 @@
 	<classpathentry kind="lib" path="WaterballDataHandler.jar"/>
 	<classpathentry kind="lib" path="xalan.jar"/>
 	<classpathentry kind="lib" path="commons-fileupload-1.3.2.jar"/>
-	<classpathentry kind="lib" path="D:/apache-tomcat-8.5.15/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="C:/apache-tomcat-8.5.15/lib/servlet-api.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
