搞定留言功能 但還有星星rating 需要實作

--- a/Servlet Design/TomcatServletDesign/bin/.gitignore
+++ b/Servlet Design/TomcatServletDesign/bin/.gitignore
@@ -5,3 +5,4 @@
 /ParallelTasksManager$Task.class
 /ParallelTasksManager$ParallelTasksRunner.class
 /ParallelTasksManager$1.class
+/CreateCommentServlet.class
